--- a/moviesearchapp/package.json
+++ b/moviesearchapp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dotenv": "^16.4.5",
     "mathjs": "^12.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
