--- a/moviesearchapp/package.json
+++ b/moviesearchapp/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.0.8",
     "mathjs": "^12.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^2.2.1",
     "web-vitals": "^2.1.4"
   },
   "repository": {
